force-app/main/default/objects/sugati__Supplier_Component_Margin__c/sugati__Supplier_Component_Margin__c.object-meta.xml
<CustomObject>
    <label>Supplier Component Margin &amp; Commission</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Supplier Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Component Margins &amp; Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>