force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>