force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Agency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agency that agrees the commission with.</description>
    <inlineHelpText>This agency is getting x% of commission from the supplier.</inlineHelpText>
    <label>Agency</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Component Margins (Agency)</relationshipLabel>
    <relationshipName>Supplier_Component_Margins1</relationshipName>
    <type>Lookup</type>
</CustomField>