force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Arrange_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Arrange_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrange By</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Supplier_Component_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>