force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Components__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Components__c</fullName>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Bulk Cost</fullName>
            </value>
            <value>
                <fullName>Car Hire</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Commission In</fullName>
            </value>
            <value>
                <fullName>Commission Out</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Days at Leisure</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Dinner Reservation</fullName>
            </value>
            <value>
                <fullName>Dom Flights</fullName>
            </value>
            <value>
                <fullName>Excursion</fullName>
            </value>
            <value>
                <fullName>Extra Items</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Int Flight</fullName>
            </value>
            <value>
                <fullName>Light Aircraft</fullName>
            </value>
            <value>
                <fullName>Linked Services</fullName>
            </value>
            <value>
                <fullName>Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>Motorbike Ride</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Own Arrangement</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
            <value>
                <fullName>Private Road Transfer</fullName>
            </value>
            <value>
                <fullName>Private Speed Boat Transfer</fullName>
            </value>
            <value>
                <fullName>Private Transfer with Excursion</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Sea Plane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>