force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>