force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Service_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Service_From__c</fullName>
    <label>Service From</label>
    <type>Date</type>
</CustomField>