force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Supplier_Margins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>