force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Travelling_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Travelling_To__c</fullName>
    <label>Booking To</label>
    <type>Date</type>
</CustomField>