force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>