force-app/main/default/objects/sugati__Supplier_Component_Margin__c/fields/sugati__SM_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__SM_Value__c</fullName>
    <label>Value</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>