force-app/main/default/objects/sugati__Supplier_Component_Margin__c/recordTypes/sugati__Agent_Commission.recordType-meta.xml
<RecordType>
    <fullName>sugati__Agent_Commission</fullName>
    <active>true</active>
    <description>Commission for the suppliers working as agent</description>
    <label>Agent Commission</label>
</RecordType>