force-app/main/default/objects/sugati__Supplier_Component_Margin__c/recordTypes/sugati__Commission.recordType-meta.xml
<RecordType>
    <fullName>sugati__Commission</fullName>
    <active>true</active>
    <label>Commission</label>
</RecordType>