force-app/main/default/objects/sugati__Supplier_Component_Margin__c/recordTypes/sugati__Margin.recordType-meta.xml
<RecordType>
    <fullName>sugati__Margin</fullName>
    <active>true</active>
    <label>Margin</label>
</RecordType>