force-app/main/default/objects/sugati__Supplier_Component_Margin__c/recordTypes/sugati__Markup.recordType-meta.xml
<RecordType>
    <fullName>sugati__Markup</fullName>
    <active>true</active>
    <label>Markup</label>
</RecordType>